# rhack

./: .dprint.json  .env  .gitignore  .justfile  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  rhack.1.scd
.github/: renovate.json
.github/workflows/: audit.yaml  ci.yaml  lint-docs.yaml  release-plz.yml  release.yml  test.yml
src/: cmd.rs  error.rs  lib.rs  main.rs
src/cmd/: edit.rs  mod.rs  undo.rs
tests/: workspace.rs
tests/fixtures/workspaces_test/: Cargo.toml.edit.fixture  Cargo.toml.undo.fixture
wix/: main.wxs
