[package]
name = "cargo-rhack"
version = "0.1.2"
authors = ["nakabonne <ryo@nakao.dev>"]
categories = ["command-line-utilities"]
edition = "2021"
homepage = "https://github.com/simonsan/rhack"
keywords = ["cli", "cargo", "dependency", "crate"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/simonsan/rhack"
rust-version = "1.65.0"
description = "Temporary edits to your Rust dependencies"

[package.metadata.wix]
upgrade-guid = "761BAF94-3270-4E25-A807-B9C44138635A"
path-guid = "7EC8468E-6ABF-44AD-8A17-94FFAABDFE2E"
license = false
eula = false

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive", "color"] }
home = "0.5.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
toml_edit = "0.19.9"

[dev-dependencies]
once_cell = "1.17.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
